# api/swagger/swagger.yml
@@ -98,6 +98,29 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/c_auth.LoginResult'
+  /auth/token/info:
+    post:
+      tags:
+      - '/auth - 授权相关 '
+      summary: 获取token信息
+      description: 获取token信息
+      operationId: .获取token信息
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: body
+        description: post 数据
+        required: true
+        schema:
+          $ref: '#/definitions/c_auth.TokenInfoParams'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/c_auth.TokenInfoResult'
   /auth/token/refresh:
     post:
       tags:
@@ -328,6 +351,40 @@ definitions:
       unique_id:
         description: 唯一标识0
         type: string
+  c_auth.TokenInfoParams:
+    title: TokenInfoParams
+    type: object
+    properties:
+      from:
+        description: 来源
+        type: string
+      token:
+        description: token
+        type: string
+      unique_id:
+        description: 唯一设备标识
+        type: string
+      user_id:
+        description: 用户id
+        type: integer
+        format: int64
+      ver:
+        description: 版本号
+        type: integer
+        format: int64
+  c_auth.TokenInfoResult:
+    title: TokenInfoResult
+    type: object
+    properties:
+      expire:
+        type: integer
+        format: int64
+      msg:
+        type: string
+      ret:
+        description: 1成功 0失败
+        type: integer
+        format: int64
   c_auth.TokenRefreshParams:
     title: TokenRefreshParams
     type: object
